--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,34 @@
+---
+import { TaskDetails } from "@/components/task/task_details";
+import Sidebar from "../components/sidebar/sidebar";
+import "../styles/global.css";
+import { Toaster } from "react-hot-toast";
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <title>Beel Project</title>
+    </head>
+    <body class="m-0 min-h-screen">
+        <div class="flex min-h-screen">
+            <!-- Sidebar -->
+            <div class="w-64 bg-gray-100 border-r">
+                <Sidebar client:load />
+            </div>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+            <!-- Main content -->
+            <main class="flex-1 overflow-auto p-4">
+                <slot />
+            </main>
+
+            <!-- Task Details Panel -->
+
+            <TaskDetails client:load />
+        </div>
+    </body>
+    <Toaster client:load />
+</html>
