feat: list services added

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,5 +30,5 @@ import { Toaster } from "react-hot-toast";
             <TaskDetails client:load />
         </div>
     </body>
-    <Toaster client:load />
+    <Toaster position="bottom-right" client:load />
 </html>
