--- a/src/layouts/Layout_auth.astro
+++ b/src/layouts/Layout_auth.astro
@@ -18,5 +18,5 @@ import { Toaster } from "react-hot-toast";
             <slot />
         </main>
     </body>
-    <Toaster client:load />
+    <Toaster position="bottom-center" client:load />
 </html>
