--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import { Toaster } from "react-hot-toast";
     </head>
     <body class="m-0 min-h-screen">
         <div class="flex min-h-screen">
-            <div class="w-64 bg-gray-100 border-r">
+            <div class="w-[320px] bg-gray-100 border-r">
                 <Sidebar client:load />
             </div>
 
