feat: instant reload of task when change the list

--- a/src/pages/list/[id].astro
+++ b/src/pages/list/[id].astro
@@ -9,7 +9,7 @@ if (!id) {
 }
 ---
 
-<Layout title={`list - ${id}`}>
+<Layout title={` - list - ${id}`}>
     <TaskForm client:load />
     <TaskList list_id={id} client:load />
 </Layout>
