--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,15 +4,18 @@ import Sidebar from "../components/sidebar/sidebar";
 import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 import { ClientRouter } from "astro:transitions";
+
+const { title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="generator" content={Astro.generator} />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Beel Project</title>
+        <title>Beel Project {title}</title>
         <ClientRouter />
     </head>
     <body class="m-0 min-h-screen">
