--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,16 +18,15 @@ const { title } = Astro.props;
         <title>Beel Project {title}</title>
         <ClientRouter />
     </head>
+
     <body class="m-0 min-h-screen">
-        <div class="flex min-h-screen">
-            <div class="w-[320px] bg-gray-100 border-r">
-                <aside transition:persist>
-                    <Sidebar client:visible />
-                </aside>
-            </div>
+        <Sidebar client:load transition:persist />
+        <div id="main-content" class="transition-all duration-300 ml-[0px]">
             <main class="flex-1 overflow-auto p-4">
                 <slot />
             </main>
         </div>
-    </body><Toaster position="bottom-right" client:load />
+
+        <Toaster position="bottom-right" client:load />
+    </body>
 </html>
