--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Sidebar from "../components/sidebar/sidebar";
 import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 import { ClientRouter } from "astro:transitions";
+import { Header } from "@/components/header/header";
 
 const { title } = Astro.props;
 ---
@@ -19,13 +20,12 @@ const { title } = Astro.props;
         <ClientRouter />
     </head>
 
-    <body class="m-0 min-h-screen">
+    <body class="flex m-0 min-h-screen">
         <Sidebar client:load transition:persist />
-        <div id="main-content" class="transition-all duration-300 ml-[0px]">
-            <main class="flex-1 overflow-auto p-4">
-                <slot />
-            </main>
-        </div>
+        <main class="flex-1 overflow-auto p-4">
+            <Header client:load />
+            <slot />
+        </main>
 
         <Toaster position="bottom-right" client:load />
     </body>
