feat: task details resizable feature, with minor bugs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,6 @@ const { title } = Astro.props;
             <slot />
         </main>
 
-        <Toaster position="bottom-right" client:load />
+        <TaskDetails client:load />
     </body>
 </html>
