--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,6 @@ import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 import { ClientRouter } from "astro:transitions";
 import { Header } from "@/components/header/header";
-import { Protected } from "@/components/Protected";
 
 const { title } = Astro.props;
 ---
@@ -21,14 +20,12 @@ const { title } = Astro.props;
         <ClientRouter />
     </head>
     <body class="flex m-0 min-h-screen">
-            <Protected client:load >
-            <Sidebar client:only="react" transition:persist />
-            <main class="flex-1 overflow-auto p-4">
-                <Header client:load />
-                <slot />
-            </main>
-            <TaskDetails client:load />
-            <Toaster position="bottom-center" client:load />
-            </Protected>
+        <Sidebar client:load transition:persist />
+        <main class="flex-1 overflow-auto p-4">
+            <Header client:load />
+            <slot />
+        </main>
+        <TaskDetails client:load />
+        <Toaster position="bottom-center" client:load />
     </body>
 </html>
