--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
             <Header client:load />
             <slot />
         </main>
-
         <TaskDetails client:load />
+        <Toaster position="bottom-center" client:load />
     </body>
 </html>
