--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,15 @@
 ---
-import LayoutAuth from "@/layouts/Layout_auth.astro";
+import LayoutIndex from "@/layouts/Layout_index.astro";
 ---
 
-<LayoutAuth>
-    <h1>Bienvenido a Beel</h1>
-    <a href="/login"> inicar sesion </a>
-</LayoutAuth>
+<LayoutIndex>
+    <div class="flex flex-col items-center justify-center h-screen gap-10">
+        <h1 class="text-3xl">Bienvenido a Beel</h1>
+        <a
+            class="bg-[#292929] text-white px-4 py-2 rounded-md hover:bg-gray-700 transition-colors"
+            href="/login"
+        >
+            inicar sesion
+        </a>
+    </div>
+</LayoutIndex>
