--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,6 +1,7 @@
 ---
 import { LoginForm } from "@/components/auth/login-form";
 import LayoutAuth from "@/layouts/Layout_auth.astro";
+import { useEffect } from "react";
 ---
 
 <LayoutAuth title="Login">
