Refactor auth guard logic and update layouts
- Remove AuthGate component and integrate auth checks into Protected and
new RedirectAuth components - Update layouts to use Protected and
RedirectAuth for route protection - Add setLoading to auth store and
improve loading state handling

--- a/src/layouts/Layout_auth.astro
+++ b/src/layouts/Layout_auth.astro
@@ -1,5 +1,5 @@
 ---
-import { Protected } from "@/components/Protected";
+import { RedirectAuth } from "@/components/Protected";
 import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 ---
@@ -12,12 +12,15 @@ import { Toaster } from "react-hot-toast";
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <title>Beel Project</title>
     </head>
+
     <body class="m-0 min-h-screen">
-        <main
-            class="flex flex-col justify-center items-center w-screen h-screen"
-        >
-            <slot />
-        </main>
+        <RedirectAuth client:load>
+            <main
+                class="flex flex-col justify-center items-center w-screen h-screen"
+            >
+                <slot />
+            </main>
+        </RedirectAuth>
+        <Toaster position="bottom-center" client:load />
     </body>
-    <Toaster position="bottom-center" client:load />
 </html>
