--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,6 @@ import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 import { ClientRouter } from "astro:transitions";
 import { Header } from "@/components/header/header";
-import { AuthGate } from "@/components/auth/auth_gate";
 import { Protected } from "@/components/Protected";
 
 const { title } = Astro.props;
@@ -21,13 +20,16 @@ const { title } = Astro.props;
         <title>Beel Project {title}</title>
         <ClientRouter />
     </head>
+
     <body class="flex m-0 min-h-screen">
-        <Sidebar client:load transition:persist />
-        <main class="flex-1 overflow-auto p-4">
-            <Header client:load />
-            <slot />
-        </main>
-        <TaskDetails client:load />
-        <Toaster position="bottom-center" client:load />
+        <Protected client:load>
+            <Sidebar client:load transition:persist />
+            <main class="flex-1 overflow-auto p-4">
+                <Header client:load />
+                <slot />
+            </main>
+            <TaskDetails client:load />
+            <Toaster position="bottom-center" client:load />
+        </Protected>
     </body>
 </html>
