feat: Update list title handling and loading states
- Add TitleListUpdater to set document title based on selected list -
Refactor Layout to use dynamic title prop - Show loading skeleton in
TaskList while fetching tasks - Persist selected list and lists in
list_store with zustand - Clean up unused imports and props in pages and
services

--- a/src/pages/list/[id].astro
+++ b/src/pages/list/[id].astro
@@ -1,4 +1,5 @@
 ---
+import { TitleListUpdater } from "@/components/list/title_list_updater";
 import { TaskForm } from "@/components/task/task_form";
 import { TaskList } from "@/components/task/task_list";
 import Layout from "@/layouts/Layout.astro";
@@ -9,7 +10,8 @@ if (!id) {
 }
 ---
 
-<Layout title={` - list - ${id}`}>
+<Layout>
+    <TitleListUpdater client:only="react" />
     <TaskForm client:load />
     <TaskList list_id={id} client:load />
 </Layout>
