--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,13 +17,13 @@ const { title } = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Beel Project {title}</title>
+        <title>{title}</title>
         <ClientRouter />
     </head>
 
     <body class="flex m-0 min-h-screen">
         <Protected client:load>
-            <Sidebar client:load transition:persist />
+            <Sidebar client:only="react" transition:persist />
             <main class="flex-1 overflow-auto p-4">
                 <Header client:load />
                 <slot />
