--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import "../styles/global.css";
 import { Toaster } from "react-hot-toast";
 import { ClientRouter } from "astro:transitions";
 import { Header } from "@/components/header/header";
+import { SettingsModal } from "@/components/user/settings_modal";
 
 const { title } = Astro.props;
 ---
@@ -24,6 +25,7 @@ const { title } = Astro.props;
         <main class="flex-1 overflow-auto p-4">
             <Header client:load />
             <slot />
+            <SettingsModal client:load/>
         </main>
         <TaskDetails client:load />
         <Toaster position="bottom-center" client:load />
