feat: implement authentication forms with login and signup functionality; update routing to use /auth instead of /login; remove deprecated login page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import LayoutIndex from "@/layouts/Layout_index.astro";
         <h1 class="text-3xl">Bienvenido a Beel</h1>
         <a
             class="bg-[#292929] text-white px-4 py-2 rounded-md hover:bg-gray-700 transition-colors"
-            href="/login"
+            href="/auth"
         >
             inicar sesion
         </a>
